--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2002-07-01  Nathanael Nerode <neroden@twcny.rr.com>
+2002-07-01  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* config-ml.in: Eliminate references to Cygnus configure.
+
+2002-07-01  Nathanael Nerode  <neroden@twcny.rr.com>
 
 	* Makefile.in: Eliminate references to building emacs.
 
