Kill last references to LIBGCC1_TEST, which is never tested and never set to anything but "".
Kill last references to LIBGCC1_TEST, which is never tested and never
set to anything but "".  Oy.

From-SVN: r55152

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-01  Nathanael Nerode <neroden@gcc.gnu.org>
+
+	* Makefile.in: Eliminate last reference to LIBGCC1_TEST.
+
 2002-07-01  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* config-ml.in: Eliminate references to Cygnus configure.
