Reorganize, remove now-redundant tests.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55154 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-07-01  Nathanael Nerode <neroden@gcc.gnu.org>
 
+	* configure.in: Eliminate redundant tests.  Reorganize.
+
+2002-07-01  Nathanael Nerode <neroden@gcc.gnu.org>
+
 	* Makefile.in: Eliminate last reference to LIBGCC1_TEST.
 
 2002-07-01  Nathanael Nerode  <neroden@gcc.gnu.org>
