--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-01  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* emit-rtl.c (init_emit_once): Add missing cast to HOST_WIDE_INT.
+
 2002-06-30  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.md (ctrdi): Allocate pseudo for FPR
