Wipe out apache.
Wipe out apache.  Don't configure cgen from the top level; that part is
simply pulled over from src.

From-SVN: r55159

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2002-06-24  Ben Elliston  <bje@redhat.com>
+
+	* configure.in (host_tools): Remove cgen.
+
+	* Makefile.in (all-cgen): Remove; runs from its source directory.
+	(check-cgen, install-cgen, clean-cgen): Likewise.
+	(all-opcodes): No not depend on all-cgen.
+	(all-sim): Likewise.
+
+2002-07-01  Nathanael Nerode <neroden@gcc.gnu.org>
+
+	* Makefile.in: Eliminate 'apache' targets.
+	* configure.in: Eliminate 'apache' targets.
+
 2002-07-01  Nathanael Nerode <neroden@gcc.gnu.org>
 
 	* configure.in: Eliminate redundant tests.  Reorganize.
