* MAINTAINERS (Write After Approval): Update my e-mail address.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55160 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-01  Matt Kraai  <kraai@alumni.cmu.edu>
+
+	* MAINTAINERS (Write After Approval): Update my e-mail address.
+
 2002-06-24  Ben Elliston  <bje@redhat.com>
 
 	* configure.in (host_tools): Remove cgen.
