--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-01  Roger Sayle  <roger@eyesopen.com>
+
+	* java/decl.c (builtin_function): Accept additional parameter.
+	(java_init_decl_processing): Pass an additional NULL_TREE
+	argument to builtin_function.
+
 2002-06-29  T.J. Mather  <tjmather@maxmind.com>
 
 	* gcj.texi: Fixed gcj invocation example so that it compiles.
