--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-01  Tom Tromey  <tromey@redhat.com>
+
+	* javax/naming/spi/NamingManager.java (getPlusPath): Don't create
+	StringTokenizer on null string.  For PR libgcj/7180.
+	From daveho@cs.umd.edu.
+
 2002-06-24  Tom Tromey  <tromey@redhat.com>
 
 	* java/net/natPlainDatagramSocketImpl.cc (BooleanClass): Removed.
