--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-01  Tom Tromey  <tromey@redhat.com>
+
+	For PR libgcj/7073:
+	* parse.y (patch_incomplete_class_ref): Handle VOID_TYPE
+	specially.
+
 2002-07-01  Roger Sayle  <roger@eyesopen.com>
 
 	* java/decl.c (builtin_function): Accept additional parameter.
