--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-01  Roger Sayle  <roger@eyesopen.com>
+
+	* config/sh/sh.c (sh_media_init_builtins): Change use of poisoned
+	identifier "bzero" to "memset".  Pass extra NULL_TREE argument to
+	builtin_function.
+
 2002-07-02  Alan Modra  <amodra@bigpond.net.au>
 
 	* README.Portability: Fix typos.
