--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2002-07-02  Phil Edwards  <pme@gcc.gnu.org>
+
+	* docs/html/configopts.html, docs/html/install.html:  Tweaks.
+	* include/ext/algorithm, include/ext/hash_map, include/ext/hash_set,
+	include/ext/iterator, include/ext/numeric, include/ext/rb_tree,
+	include/ext/slist, include/ext/stl_rope.h:  Add doxygen hooks.
+
 2002-06-28  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/c_compatibility: New.
