re PR target/7177 (cris-axis-elf: ICE at -O2, unrecognized insn, sign-extend mem)
	PR target/7177
	* config/cris/cris.h (LEGITIMIZE_RELOAD_ADDRESS): Correct number
	of indirections for register inside sign-extended mem part.

From-SVN: r55180

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-02  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/7177
+	* config/cris/cris.h (LEGITIMIZE_RELOAD_ADDRESS): Correct number
+	of indirections for register inside sign-extended mem part.
+
 2002-07-01  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* emit-rtl.c (init_emit_once): Add missing cast to HOST_WIDE_INT.
