re PR c++/6716 (loop and fill ram during compiling)
	PR c++/6716
	* pt.c (can_complete_type_without_circularity): New function.
	(instantiate_class_template): Use it.
	* typeck2.c (incomplete_type_error): Improve error message
	due to incomplete fields.

	* g++.dg/template/instantiate1.C: New test.

From-SVN: r55181

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-02  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/6716
+	* g++.dg/template/instantiate1.C: New test.
+
 2002-07-01  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/7112
