--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-02  Neil Booth  <neil@daikokuya.co.uk>
+
+	* gcc.dg/cpp/cmdlne-M.c: New test.
+
 2002-07-02  Ziemowit Laski  <zlaski@apple.com>
 
 	* objc.dg/desig-init-1.m: New test.
