* doc/cpp.texi: Update for traditional preprocessing changes. 	* goc/cppopts.texi: Similarly.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55194 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/cppopts.texi
+++ b/gcc/doc/cppopts.texi
@@ -551,10 +551,10 @@ Define the macros @sc{__gnuc__}, @sc{__gnuc_minor__} and
 @command{gcc -E}; you can turn them off in that case with
 @option{-no-gcc}.
 
-@item -traditional
-@opindex traditional
-Try to imitate the behavior of old-fashioned C, as opposed to ISO
-C@.
+@item -traditional-cpp
+@opindex traditional-cpp
+Try to imitate the behavior of old-fashioned C preprocessors, as
+opposed to ISO C preprocessors.
 @ifset cppmanual
 @xref{Traditional Mode}.
 @end ifset
