--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-02  Neil Booth  <neil@daikokuya.co.uk>
+	
+	* doc/cpp.texi: Update for traditional preprocessing changes.
+	* goc/cppopts.texi: Similarly.
+
 2002-07-02  Ziemowit Laski  <zlaski@apple.com>
 
 	* c-parse.in (designator): Enable designated initializers if ObjC.
