--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -29,6 +29,7 @@ Tue Jul  2 18:45:45 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 2002-07-02  Neil Booth  <neil@daikokuya.co.uk>
 
+	PR preprocessor/7029
 	* cppinit.c (cpp_handle_option):  Suppress warnings with an
 	implicit "-w" for "-M" and "-MM".
 	* doc/cppopts.texi: Update.
