cpptrad.c: Update comment.
	* cpptrad.c: Update comment.
testsuite:
	* gcc.dg/cpp/trad/directive.c: Add test.
	* gcc.dg/cpp/trad/macroargs.c: Add test.
	* gcc.dg/cpp/trad/recurse-3.c: Add tests.

From-SVN: r55196

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-03  Neil Booth  <neil@daikokuya.co.uk>
+
+	* cpptrad.c: Update comment.
+
 2002-07-02  Neil Booth  <neil@daikokuya.co.uk>
 	
 	* doc/cpp.texi: Update for traditional preprocessing changes.
