--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-03  Neil Booth  <neil@daikokuya.co.uk>
+
+	* gcc.dg/cpp/trad/directive.c: Add test.
+	* gcc.dg/cpp/trad/macroargs.c: Add test.
+	* gcc.dg/cpp/trad/recurse-3.c: Add tests.
+
 2002-07-02  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/cmdlne-M.c: New test.
