* objc/objc-act.c (adjust_type_for_id_default): Do not allow an         object as parameter. Prevent something like 'NSObject' to be         used as the type for a method argument.
      testsuite:
      * objc.dg/param-1.m: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55197 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,6 @@
+2002-07-02 Devang Patel <dpatel@apple.com>
+	* objc.dg/param-1.m: New test.
+
 2002-07-03  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/trad/directive.c: Add test.
