fix formatting of previous ChangeLog entry
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55198 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,5 @@
+2002-07-02 Devang Patel <dpatel@apple.com>
 
-2002-07-02 Devang Patel <dpatel@apple.com
 	* objc/objc-act.c (adjust_type_for_id_default): Do not allow an
 	  object as parameter. Prevent something like 'NSObject' to be
 	  used as the type for a method argument.
