2002-07-02  Chris Demetriou  <cgd@broadcom.com>
        * config.gcc (mips*el-*-*): Use tm_defines to set
        TARGET_ENDIAN_DEFAULT, rather than including mips/little.h.
        * config/mips/little.h: Remove.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55200 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-02  Chris Demetriou  <cgd@broadcom.com>
+
+	* config.gcc (mips*el-*-*): Use tm_defines to set
+	TARGET_ENDIAN_DEFAULT, rather than including mips/little.h.
+	* config/mips/little.h: Remove.
+
 2002-07-02 Devang Patel <dpatel@apple.com>
 
 	* objc/objc-act.c (adjust_type_for_id_default): Do not allow an
