gcc: 	* c-parse.in (parsing_iso_function_signature): New variable. 	(extdef_1): New, copied from... 	(extdef): ... here.  Reset parsing_iso_function_signature. 	(old_style_parm_decls):  Reset parsing_iso_function_signature. 	(old_style_parm_decls_1): New, copied from old_style_parm_decls. 	Warn about ISO C style function definitions. 	(nested_function, notype_nested_function): Reset 	parsing_iso_function_signature. 	(parmlist_2): Set parsing_iso_function_signature.
	* doc/invoke.texi (-Wtraditional): Document new behavior.

gcc/testsuite:
	* gcc.dg/cpp/tr-warn2.c: Use traditional C style function definitions.
	* gcc.dg/wtr-aggr-init-1.c: Likewise.
	* gcc.dg/wtr-conversion-1.c: Likewise.
	* gcc.dg/wtr-escape-1.c: Likewise.
	* gcc.dg/wtr-int-type-1.c: Likewise.
	* gcc.dg/wtr-label-1.c: Likewise.
	* gcc.dg/wtr-static-1.c: Likewise.
	* gcc.dg/wtr-strcat-1.c: Likewise.
	* gcc.dg/wtr-suffix-1.c: Likewise.
	* gcc.dg/wtr-switch-1.c: Likewise.
	* gcc.dg/wtr-unary-plus-1.c: Likewise.
	* gcc.dg/wtr-union-init-1.c: Likewise.
	* gcc.dg/wtr-union-init-2.c: Likewise.
	* gcc.dg/wtr-union-init-3.c: Likewise.

	* gcc.dg/wtr-func-def-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55201 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2002-07-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* c-parse.in (parsing_iso_function_signature): New variable.
+	(extdef_1): New, copied from...
+	(extdef): ... here.  Reset parsing_iso_function_signature.
+	(old_style_parm_decls):  Reset parsing_iso_function_signature.
+	(old_style_parm_decls_1): New, copied from old_style_parm_decls.
+	Warn about ISO C style function definitions.
+	(nested_function, notype_nested_function): Reset
+	parsing_iso_function_signature.
+	(parmlist_2): Set parsing_iso_function_signature.
+
+	* doc/invoke.texi (-Wtraditional): Document new behavior.
+
 2002-07-02  Chris Demetriou  <cgd@broadcom.com>
 
 	* config.gcc (mips*el-*-*): Use tm_defines to set
