--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-02  Will Cohen <wcohen@redhat.com>
+
+	* config/i386/i386.c (x86_integer_DFmode_moves): Disable for PPro.
+
 Wed Jul  3 10:24:16 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* optabs.c (expand_vector_binop): Don't store using a SUBREG smaller
