PR c++/6944 	* init.c (build_aggr_init): Remove qualifiers of init before calling 	build_vec_init. 	(build_vec_init): Flatten multi-dimensional array during cleanup. 	(build_vec_delete_1): Abort if the type of each element is array.
	* g++.dg/init/array4.C: New test.
	* g++.dg/init/array5.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55214 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-03  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/6944
+	* g++.dg/init/array4.C: New test.
+	* g++.dg/init/array5.C: New test.
+
 Wed Jul  3 10:25:41 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* gcc.c-torture/execute/simd-1.c (main): Also test &, |, ^, ~.
