--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2002-07-03  Eric Botcazou  <ebotcazou@multimania.com>
+	    Jeff Law  <law@redhat.com>
+
+	* i386.md (length_immediate attribute): Fix typo.
+	(length_address attribute): Likewise.
+	(modrm attribute): Set it to 0 for immediate call instructions.
+	(jcc_1 pattern): Set modrm attribute to 0.
+	(jcc_2 pattern ): Likewise.
+	(jump pattern): Likewise.
+	(doloop_end_internal pattern): Explicitly set length.
+	(leave pattern): Fix typo.
+	(leave_rex64 pattern): Likewise.
+
 2002-07-03  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.md (fix_truncdfsi2_internal): Ignore DImode
